--- a/index.html
+++ b/index.html
@@ -573,9 +573,9 @@
     <script>
         // --- 設定區塊 ---
         const MUSIC_CONFIG = {
-            username: '您的GitHub帳號',
-            repo: '您的儲存庫名稱',
-            folder: 'Music' // 若在根目錄請留空，例如: ''
+            username: 'nicktsai88',
+            repo: 'Music',
+            folder: '' // 若在根目錄請留空，例如: ''
         };
 
         const LEVEL_CONFIG = [20, 20, 20];
