--- a/index.html
+++ b/index.html
@@ -618,13 +618,13 @@
 
         // 2. 請填入您的 Firebase 設定
         const firebaseConfig = {
-            apiKey: "YOUR_API_KEY",
-            authDomain: "YOUR_PROJECT_ID.firebaseapp.com",
-            projectId: "YOUR_PROJECT_ID",
-            storageBucket: "YOUR_PROJECT_ID.appspot.com",
-            messagingSenderId: "YOUR_MESSAGING_SENDER_ID",
-            appId: "YOUR_APP_ID"
-        };
+  apiKey: "AIzaSyAxQFt76ZPXE7d0i1XeNZ1yiiD2WYNIfHs",
+  authDomain: "chinese-learning-47f4d.firebaseapp.com",
+  projectId: "chinese-learning-47f4d",
+  storageBucket: "chinese-learning-47f4d.firebasestorage.app",
+  messagingSenderId: "76289812052",
+  appId: "1:76289812052:web:898384a916f9f341f62fc1"
+};
 
         let app, db, auth;
         let isFirebaseReady = false;
